--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: The Sand Lab
 email: amsand@butler.edu
 description: > # this means to ignore newlines until "baseurl:"
-  Website of the AllanLab.
+  Website of the Sand Lab.
 baseurl: ""
 url: ""
 
