--- a/_data/team_members.yml
+++ b/_data/team_members.yml
@@ -1,5 +1,5 @@
 - name: Andrew M. Sand
-  photo: Milan1.jpg
+  photo: rock.jpg
   info: Associate professor, started Aug. 2018
   email: amsand@butler.edu
   number_educ: 4
